[Mac] Fix a crash in handling keyboard shortcuts for empty bookmark folder menus.

Empty bookmark bar folder menus have an "(empty)" button that is not associated
with an actual model node. This leads to a DCHECK in the BookmarkBarController,
but crashes in release mode.

BUG=690424

Review-Url: https://codereview.chromium.org/2752433002
Cr-Commit-Position: refs/heads/master@{#456460}

Former-commit-id: 8da61374a11432c3b6c3acf43d50d562439dba02